--- a/.gitignore
+++ b/.gitignore
@@ -263,4 +263,5 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+.idea/
 # End of https://www.toptal.com/developers/gitignore/api/python,djangoportfolio/migrations/*.py
